# luiminer-ocl-cuda

./: CMakeLists.txt  README.md  ReadMe.txt
cmake-modules/: FindCURL.cmake  FindJansson.cmake  FindOPENCL.cmake
src/: aes_helper.cu  blake.cu  bmw.cu  compat.h  cubehash.cu  darkcoin-mod.cl  echo.cu  groestl.cu  helper.h  jh.cu  keccak.cu  luffa.cu  miner.cpp  miner.h  shavite.cu  simd.cu  skein.cu  util.cpp  x11cpu.cpp  x11cuda.cu  x11cuda.h  x11opencl.cpp  x11opencl.h  xmalloc.cpp  xmalloc.h
src/compat/: getopt_long.c  gettimeofday.c  mstcpip.h
src/sha3/: blake.cpp  fugue.cpp  groestl.cpp  hamsi.cpp
